--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@vercel/analytics": "^1.3.0",
     "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.7.2",
     "next": "14.2.3",
+    "openai": "^4.47.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1"
