--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.47.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
