--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "dev": "cross-env PORT=3784 next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prismaDev": "dotenv -e .env.local prisma migrate dev"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^5.14.0",
     "@vercel/analytics": "^1.3.0",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.7.2",
     "next": "14.2.3",
     "openai": "^4.47.1",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
