--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.14.0",
     "@vercel/analytics": "^1.3.0",
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "openai": "^4.47.1",
     "prisma": "^5.14.0",
@@ -25,9 +27,11 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.5",
+    "rehype-raw": "^7.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
